kubernetes/postgresql.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: polar-postgres
  labels:
    db: polar-postgres
spec:
  selector:
    matchLabels:
      db: polar-postgres
  template:
    metadata:
      labels:
        db: polar-postgres
    spec:
      containers:
        - name: polar-postgres
          image: postgres:14.4
          # lifecycle:
            # postStart:
              # exec:
                # command: ["/bin/sh", "-c", "sleep 20 && psql -w -U user -d postgres -c 'CREATE DATABASE polardb_catalog;' -c 'CREATE DATABASE polardb_order;'"]
          resources:
            requests:
              cpu: 100m
              memory: 60Mi
            limits:
              cpu: 200m
              memory: 120Mi
          volumeMounts:
            - mountPath: /docker-entrypoint-initdb.d
              name: postgres-config-volume
      volumes:
        - name: postgres-config-volume
          configMap:
            name: postgres-config            

---

apiVersion: v1
kind: Service
metadata:
  name: polar-postgres
  labels:
    db: polar-postgres
spec:
  type: ClusterIP
  selector:
    db: polar-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
