kubernetes/ingress-nginx.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polar-ingress
  # annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: edge-service
                port:
                  number: 80
          - path: /polar-rabbitmq
            pathType: Exact
            backend:
              service:
                name: polar-rabbitmq
                port:
                  number: 15672
